syntax = "proto3";

option go_package = "./pb";

package pb;

import "google/api/annotations.proto";

message SendUserMsgReq {
  string content_type = 1;   // 内容类型
  int64 send_msg_id = 2;     // 用于服务端去重,客户端去重
  uint64 send_user_id = 4;   // sender user id
  uint64 recv_user_id = 5;   // chat room id
  bytes data = 6;            // payload body
  optional bool is_test = 7; // 是否测试
}

message SendUserMsgResp { int64 server_id = 1; }

message SendRoomMsgReq {
  string content_type = 1;   // 内容类型
  int64 send_msg_id = 2;     // 用于服务端去重,客户端去重
  uint64 send_user_id = 4;   // sender user id
  uint64 room_id = 5;        // chat room id
  bytes data = 6;            // payload body
  optional bool is_test = 7; // 是否测试
}

message SendRoomMsgResp { int64 server_id = 1; }

message PostMomentsReq {
  string content_type = 1;   // 内容类型
  int64 send_moments_id = 2; // 用于服务端去重,客户端去重
  uint64 user_id = 4;        // sender user id
  bytes data = 5;            // payload body
  optional bool is_test = 6; // 是否测试
}

message PostMomentsResp { int64 server_id = 1; }

service MsgSend {

  rpc SendUserMsg(SendUserMsgReq) returns (SendUserMsgResp) {
    option (google.api.http) = {
      post : "/api/v1/user/msg"
      body : "*"
    };
  }

  rpc SendRoomMsg(SendRoomMsgReq) returns (SendRoomMsgResp){
    option (google.api.http) = {
      post : "/api/v1/group/msg"
      body : "*"
    };
  }

  rpc PostMoments(PostMomentsReq) returns (PostMomentsResp){
    option (google.api.http) = {
      post : "/api/v1/user/moments"
      body : "*"
    };
  }
}